# biped_control

./: CMakeLists.txt  README.md  package.xml
config/: biped_controllers.yaml  biped_model.yaml  gait_parameters.yaml
include/biped_control/: biped.hpp  types.hpp
include/biped_control/hardware/: dynamixel_interface.hpp  motor_controller.hpp
include/biped_control/kinematics/: forward_kinematics.hpp
include/biped_control/utils/: transforms.hpp
include/biped_control/visualization/: biped_visualizer.hpp
launch/: biped_complete.launch  motor_manager.launch  start_controller.launch  trajectory_commander.launch
src/: biped.cpp
src/hardware/: motor_controller.cpp
src/kinematics/: forward_kinematics.cpp
src/utils/: transforms.cpp
src/visualization/: biped_visualizer.cpp
